[add logger, add register user handler]
